--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+ssh://git@github.com:Adalab/adalab-web-starter-kit.git"
+		"url": "-"
 	},
-	"author": "Adalab",
+	"author": "Marta",
 	"license": "MIT",
-	"homepage": "https://github.com/adalab/adalab-web-starter-kit"
+	"homepage": ""
 }
