--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
 		"start": "./node_modules/.bin/gulp",
 		"docs": "rm -rf docs && ./node_modules/.bin/gulp docs",
 		"push-docs": "rm -rf docs && gulp docs && git add docs/* && git commit -m \"Update docs\" && git push",
-		"deploy": "npm run push-docs",
-		"githubpages": "rm -rf build && rm -rf buil && npm run build && mv build docs && git add docs/* && git commit -m \"Publish in GitHub Pages\" && git push"
+		"deploy": "npm run push-docs"
 	},
 	"repository": {
 		"type": "git",
